# echo-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.cpp  dialog.cpp  dialog.h  main.cpp  resources.qrc  server.cpp
include/: client.h  dialog.h  server.h
source/: client.cpp  dialog.cpp  main.cpp  server.cpp
